Make user-specific application directory name configurable using --with-user-appdir. Thanks to Ben Bucksch <ben.bucksch@beonex.com> for the original patch. Bug #58327 r=dougt