xpcom/components/nsComponentManager.h
@@ -254,32 +254,6 @@ protected:
 
 #define NS_ERROR_IS_DIR NS_ERROR_GENERATE_FAILURE(NS_ERROR_MODULE_XPCOM, 24)
 
-#if defined(XP_UNIX) && !defined(XP_MACOSX)
-/* The default registry on the unix system is $HOME/.mozilla/registry per
- * vr_findGlobalRegName(). vr_findRegFile() will create the registry file
- * if it doesn't exist. But it wont create directories.
- *
- * Hence we need to create the directory if it doesn't exist already.
- *
- * Why create it here as opposed to the app ?
- * ------------------------------------------
- * The app cannot create the directory in main() as most of the registry
- * and initialization happens due to use of static variables.
- * And we dont want to be dependent on the order in which
- * these static stuff happen.
- *
- * Permission for the $HOME/.mozilla will be Read,Write,Execute
- * for user only. Nothing to group and others.
- */
-#define NS_MOZILLA_DIR_NAME		".mozilla"
-#define NS_MOZILLA_DIR_PERMISSION	00700
-#endif /* XP_UNIX */
-
-#ifdef XP_BEOS
-#define NS_MOZILLA_DIR_NAME		"Mozilla"
-#define NS_MOZILLA_DIR_PERMISSION	00700
-#endif /* XP_BEOS */
-
 ////////////////////////////////////////////////////////////////////////////////
 /**
  * Class: nsFactoryEntry()
